# GenAi_Admin_V3

./: .env.example  README.md  config.json  metadata.json  package-lock.json  package.json  pyproject.toml  requirements.txt  server.ts  vite.config.ts
backend/: config.py  database.py  database.ts  main.py
backend/core/: config.py  dependencies.py  security.py
backend/models/: category.py  user.py  workspace_app.py
backend/routes/: admin.py  auth.py  workspace.py
backend/schemas/: category.py  user.py  workspace_app.py
backend/services/: category_service.py  user_service.py  workspace_app_service.py
docs/: HLD.md  LLD.md  SSO_INTEGRATION.md  ULD.md
src/: App.tsx  constants.ts  index.css
src/components/: Layout.tsx
src/modules/admin/: AdminModule.tsx  types.ts  utils.ts
src/modules/admin/components/: AdminApplicationsPage.tsx  AdminCard.tsx  AdminCategoriesPage.tsx  AdminDashboardCards.tsx  AdminDashboardLinksTab.tsx  AdminSidebar.tsx  ManageCategoriesTab.tsx  WorkspaceAppsTab.tsx
src/modules/admin/services/: api.ts
src/modules/workspace/: WorkspaceModule.tsx
src/modules/workspace/components/: AppItem.tsx  CardSurfaceContainer.tsx  CategoryTabs.tsx  DetailPanel.tsx  Header.tsx  Hero.tsx  RobotAnimation.tsx  SidebarNavigation.tsx
src/pages/: LoggedOut.tsx  Login.tsx
src/shared/: types.ts
src/shared/components/: Toast.tsx
src/shared/context/: AuthContext.tsx  PreferencesContext.tsx  UserPreferenceContext.tsx  usePreferences.ts  useUserPreference.ts
src/shared/services/: api.ts
src/shared/utils/: categoryColors.ts
(+3 files in other folders)
